--- a/src/scss/components/hero.scss
+++ b/src/scss/components/hero.scss
@@ -1,14 +1,56 @@
 .hero {
-	padding-top: 4rem;
+	margin-top: 4rem;
+	margin-bottom: 4rem;
+	@media (max-width: $breakpoint-tablet) {
+		margin-top: 2rem;
+		margin-bottom: 2rem;
+	}
 	.container {
 		display: flex;
+		align-items: center;
+		@media (max-width: $breakpoint-tablet) {
+			display: block;
+		}
 
 	}
 	&__text-part {
 		width: 40%;
+		@media (max-width: $breakpoint-tablet) {
+			width: 100%;
+		}
 	}
-	&___image {
+	&__title {
+		font-size: 5rem;
+		@media (max-width: $breakpoint-tablet) {
+			font-size: 3rem;
+		}
+	}
+	&__subtitle {
+		font-size: 2rem;
+		@media (max-width: $breakpoint-tablet) {
+			font-size: 1.25rem;
+		}
+	}
+	&__image {
 		width: 50%;
 		margin-left: auto;
+		object-fit: contain;
+		@media (max-width: $breakpoint-tablet) {
+			width: 100%;
+		}
+	}
+	&__button button {
+		border: none;
+		font-weight: 600;
+		font-size: 1.15rem;
+		border-radius: 1.25rem;
+		padding: .5rem 2rem;
+		cursor: pointer;
+		background: $orange;
+		color: $navy;
+		@media (max-width: $breakpoint-tablet) {
+			padding: .25rem 1rem;
+			margin-bottom: 3rem;
+		}
 	}
 }
