--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -3,6 +3,9 @@ header {
 	background: $navy;
 	color: $font-color-light;
 	padding: 1.25rem 0;
+	position: fixed;
+	top: 0;
+	left: 0;
 
 	.container {
 		display: flex;
